# PyBloom

./: .env.example  .gitignore  Dockerfile  MQTT_BRIDGE_GUIDE.md  README.md  deploy.sh  docker-compose.yml  mosquitto.conf  pyproject.toml
custom_components/xbloom_mqtt/: __init__.py  button.py  config_flow.py  const.py  manifest.json  number.py  select.py  sensor.py
custom_components/xbloom_mqtt/www/: xbloom-studio-card.js
docs/: MQTT_BRIDGE_GUIDE.md  PROTOCOL_DOCUMENTATION.md  YAML_RECIPE_CONFIGURATION.md
examples/: DASHBOARD_README.md  configuration_yaml_recipes.yaml  lovelace_xbloom.yaml  simple_brew.py  simple_grind.py  simple_pour.py  simple_tea_pour.py  simple_weight.py
examples/themes/: xbloom_studio.yaml
src/xbloom/: bridge.py  cli.py
src/xbloom/components/: brewer.py
src/xbloom/core/: client.py
src/xbloom/models/: types.py
tests/: mock_device.py  test_protocol.py  test_spec_1_parameters.py  test_spec_2_structure.py  test_spec_3_cup_machine.py  test_spec_5_workflows_ble.py  test_spec_7_nfc.py  test_spec_9_misc.py
