[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybloom"
version = "0.1.0"
description = "Open-source Python library for automating XBloom coffee machines via Bluetooth LE"
readme = "README.md"
authors = [
  { name = "Frédéric Bhikharie" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["xbloom", "coffee", "bluetooth", "ble", "automation", "iot"]
dependencies = [
    "bleak>=0.21.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
mqtt = ["aiomqtt>=1.2.0"]
all = ["aiomqtt>=1.2.0"]

[project.urls]
Repository = "https://github.com/fhenwood/PyBloom"

[project.scripts]
xbloom = "xbloom.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
